# kaisei

./: .gitignore  CMakeLists.txt
examples/presets/: cinematic.preset  dramatic.preset  mono.preset  test.preset  vintage.preset
modules/: anime.frag  anime.toml  blue.frag  blue.toml  brightness.frag  brightness.toml  contrast.frag  contrast.toml  crt.frag  crt.toml  grayscale.frag  grayscale.toml  invert.frag  invert.toml  passthrough.toml  pulse.frag  pulse.toml  saturation.frag  saturation.toml  sepia.frag  sepia.toml  vignette.frag  vignette.toml  wave.frag  wave.toml
shaders/: passthrough.frag  vertex.vert
src/: CMakeLists.txt  main.cpp
src/backend/: backend.h  openGLBackend.cpp  openGLBackend.h  shaderPreprocessor.cpp  shaderPreprocessor.h
src/cli/: cli.cpp  cli.h  moduleCommands.cpp  moduleCommands.h  presetCommands.cpp  presetCommands.h  previewCommands.cpp  previewCommands.h
src/cli/integrations/: hyprlandCommands.cpp  hyprlandCommands.h  previewCommands.cpp  previewCommands.h
src/core/: module.cpp  module.h  moduleLoader.cpp  moduleLoader.h  preset.cpp  preset.h  presetLoader.cpp  presetLoader.h  registry.cpp  registry.h
src/integration/hyprland/: hyprlandBackend.cpp  hyprlandBackend.h  hyprlandPlugin.cpp  hyprlandPlugin.h  hyprlandRenderer.cpp  hyprlandRenderer.h  hyprlandServer.cpp  hyprlandServer.h
src/integration/preview/: previewRenderer.cpp  previewRenderer.h  previewWindow.cpp  previewWindow.h
src/renderer/: multiPassRenderer.cpp  multiPassRenderer.h
src/utils/: format.h  shaderErrorFormatter.cpp  shaderErrorFormatter.h
tools/: kaisei-ctl.cpp
